--- a/shizhan.html
+++ b/shizhan.html
@@ -14,7 +14,7 @@
             text-decoration:none;
         }
         body{
-            fout:1.5px/1.5 Arial;
+            font:1.5px/1.5 Arial;
             background-color:rgb(255, 242, 227);
             text-align:center;
         }
